# Life-Agent-RU-YEE

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_EN.md  docker-compose.override.yml.example  docker-compose.yml  nginx-allow.conf  nginx.conf  pyproject.toml
api/: chat.py
core/: agent_comm.py  orchestrator.py
plugins/agents/meal_agent/: agent.py
plugins/agents/meal_agent/tools/: dish_query_tool.py  meal_recommend_tool.py  shopping_list_tool.py
plugins/agents/purchasing_agent/: agent.py
plugins/agents/purchasing_agent/tools/: hema_cart_status.py
plugins/memory/short_term_memory/: memory.py
web/src/: types.ts
web/src/api/: chat.ts
web/src/components/chat/: MessageBubble.vue  ToolCallCard.vue
web/src/composables/: useSSE.ts
web/src/views/: ChatView.vue  SkillHubView.vue
