[project]
name = "life-agent-ru-yee"
version = "0.1.0"
description = "AI 驱动的生活管理 Agent 框架，可插拔架构"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "litellm>=1.60.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "redis[hiredis]>=5.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]
mem0 = ["mem0ai>=1.0.0"]
memobase = ["memobase>=0.0.26"]
milvus = ["pymilvus>=2.4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["core*", "api*", "cli*", "plugins*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.j2", "*.jinja2", "*.json"]

[tool.ruff]
line-length = 120
target-version = "py311"
